Fix Java 8 compile