@@ -195,14 +195,13 @@ final class FoundationListener implements Listener {
 	}
 
 	@EventHandler(priority = EventPriority.HIGH)
-	public void onAnvilPrepareItem(PrepareAnvilEvent e) {
+	public void onAnvilPrepareItem(PrepareAnvilEvent event) {
 		// A Weird visual bug where the anvil displays none
 		// tested on 1.20.4 -> If you:
 		// 1. Put an undamaged item with custom enchantment
 		// 2. Put another item with a custom enchantment By using a shift click (Or swapping items by picking it up)
 		// the anvil output flashes then empties
-		if (HookManager.isProtocolLibLoaded() && e.getResult() != null && !CompMaterial.isAir(e.getResult().getType()))
-			Bukkit.getScheduler().runTask(SimplePlugin.getInstance(), () -> ((Player) e.getViewers().getFirst())
-					.updateInventory());
+		if (HookManager.isProtocolLibLoaded() && event.getResult() != null && !CompMaterial.isAir(event.getResult().getType()))
+			Common.runLater(() -> ((Player) event.getViewers().get(0)).updateInventory());
 	}
 }
